tests/Errors/Generic/Commenting/Fixme/TaskFound.php
<?php

declare(strict_types=1);

$foo = 'bar';

// FIXME: Something to fix
echo $foo;
